# osubuffer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.c
include/: buffer.h  buffer_reader.h  core.h
src/: buffer.c  buffer_reader.c
